# ReadingMachine

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CLASS_INTERACT.md  LICENSE  NOTICE  PIPELINE.md  README.md  REPOSITORY_STRUCTURE.md  main_test.py  pyproject.toml
.github/workflows/: render-public-eval.yml
commentary/: README.md  tutorial.md
commentary/arxiv-2026/: bib.bib  pipeline.R  white_paper.tex
data/corpus/: PLACE_PAPERS_HERE.md
docs/: CODE_ARCHITECTURE.md
documentation/: ARCHITECTURE.md  README.md  white_paper.md
documentation/whitepaper_figures/: pipeline.R
evaluation/: EVAL_INSTRUCTIONS.md  INDUSTRIAL_POLICY.md  README.md
evaluation/eval_output/: public_eval.html  public_eval.md
evaluation/industrial_policy_main_run/: corpus.md  indusrial_policy_v2.docx  industrial_policy_current.md  industrial_policy_v2.md  notes.md
evaluation/industrial_policy_previous_runs/: industrial_policy_v1.md  notes.md
evaluation/r_scripts/: DESCRIPTION  eval_helpers.R  package_installer.R  public_eval_render.Rmd  pull_eval_data.R  render_report.R
examples/: README.md  example_env.md  run_core_pipeline.py  run_getlit_pipeline.py  run_pipeline.py  run_pipeline_test.py  toy_corpus.md
lit_review_machine/: config.py  core.py  getlit.py  processing.py  prompts.py  render.py  state.py  utils.py
readingmachine/: config.py  core.py  outputs.py  prompts.py  render.py  state.py  utils.py
readingmachine/tools/: getlit.py
tools/: getlit.py
workflows/: render-public-eval.yml
