[project]
name = "readingmachine"
version = "0.0.1"
description = "Structured methodology for large-scale thematic synthesis across natural-language corpora"
requires-python = ">=3.12,<3.13"

dependencies = [
    "python-dotenv",
    "openai",
    "scholarly",
    "unpywall",
    "numpy==1.26.4",
    "pandas==2.2.2,
    "rapidfuzz",
    "networkx",
    "semanticscholar",
    "pymupdf",
    "kneed",
    "langchain-text-splitters",
    "umap-learn==0.5.7",
    "numba>=0.59.0",
    "pynndescent>=0.6.0",
    "scikit-learn==1.3.2",
    "hdbscan",
    "python-docx",
    "pyarrow",
    "fastparquet",
    "requests",
    "beautifulsoup4", 
    "crossref",
    "backoff", 
    "tiktoken", 
    "habanero",
    "reportlab"
]

[tool.setuptools.packages.find]
include = ["readingmachine*"]