[project]
name = "readingmachine"
version = "0.0.1"
description = "Structured methodology for large-scale thematic synthesis across natural-language corpora"
requires-python = ">=3.11,<3.12"

dependencies = [
    "python-dotenv",
    "openai",
    "scholarly",
    "unpywall",
    "numpy==1.26.4",
    "scipy==1.11.4",
    "pandas==2.2.2",
    "rapidfuzz",
    "networkx",
    "semanticscholar",
    "pymupdf==1.24.9",
    "kneed",
    "langchain-text-splitters",
    "umap-learn==0.5.7",
    "numba>=0.59.0",
    "pynndescent>=0.6.0",
    "scikit-learn==1.3.2",
    "hdbscan",
    "python-docx",
    "pyarrow==14.0.2",
    "fastparquet==2024.5.0",
    "requests",
    "beautifulsoup4",
    "crossref",
    "backoff",
    "tiktoken",
    "habanero",
    "reportlab",
]

[tool.setuptools.packages.find]
include = ["readingmachine*"]
